# bevy_wasmcloud_patches

./: Cargo.toml  Readme.md
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: default_plugins.rs  lib.rs  prelude.rs
crates/bevy_render/: Cargo.toml
crates/bevy_render/src/: lib.rs
crates/bevy_render/src/renderer/: mod.rs
crates/bevy_render/src/view/: mod.rs
crates/bevy_time/: Cargo.toml
crates/bevy_time/src/: lib.rs  time.rs
crates/getrandom/src/: lib.rs  wasmcloud.rs
