[package]
name = "bevy_wasmcloud_patches"
version = "0.8.1"
edition = "2021"
categories = ["game-engines", "graphics", "gui", "rendering"]
description = "bevy_wasmcloud_patches non-rendering ecs physics"
homepage = "https://bevyengine.org"
keywords = ["game", "engine", "gamedev", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alanpoon/bevy_wasmcloud_patches"

[workspace]
members = [
  "crates/*",
]

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy",rev="b995b4662a9481e8d6fd984b2d2fd02e1c2d1a5d", default-features = false }
bevy_rapier2d = { git = "https://github.com/alanpoon/bevy_rapier", rev = "777ed4f493d2f15ddf8f025e25ae81c7b33f6f5e" }
serde = { version = "1.0.123", features = ["derive"]}

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[patch.crates-io]
getrandom = {path="crates/getrandom"}

[patch."https://github.com/bevyengine/bevy"]
bevy_app = {path="crates/bevy_app"}
bevy_internal = {path="crates/bevy_internal"}
bevy_render = {path="crates/bevy_render"}
bevy_time = {path="crates/bevy_time"}